Refactor: Update Gradle and dependencies, rename project
This commit updates the Android Gradle plugin version, Kotlin version, and Gradle wrapper distribution URL. It also renames the project from `crafty_bay` to `e_commerce_flutter_crafty_bay` across various files.

Additionally, the following changes were made:
- Added `shared_preferences` as a direct main dependency.
- Updated various other dependencies in `pubspec.lock`.
- Made minor code adjustments in `product_details_screen.dart`, `splash_screen.dart`, `product_controller.dart`, `auth_controller.dart`, and `network_caller.dart` to accommodate the project rename and updated dependencies.
- Added plugin registration for `SharedPreferencesPlugin` and `WebViewFlutterPlugin` in `GeneratedPluginRegistrant.swift`.
- Commented out a line in `settings.gradle`.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,22 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.9.23'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.23"
+
+        //classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        //noinspection AndroidGradlePluginVersion
+        classpath 'com.android.tools.build:gradle:8.2.0'
+
+    }
+    dependencies {
+        classpath("com.android.tools.build:gradle:8.3.2") // Or the latest Android Gradle Plugin version
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
     }
 }
 
@@ -26,6 +35,6 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
