--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,15 @@
 buildscript {
     ext.kotlin_version = '1.9.23'
+
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.23"
-
-        //classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        //noinspection AndroidGradlePluginVersion
-        classpath 'com.android.tools.build:gradle:8.2.0'
-
-    }
-    dependencies {
-        classpath("com.android.tools.build:gradle:8.3.2") // Or the latest Android Gradle Plugin version
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
+        classpath 'com.android.tools.build:gradle:8.11.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'dev.flutter:flutter-gradle-plugin'
     }
 }
 
@@ -25,16 +18,4 @@ allprojects {
         google()
         mavenCentral()
     }
-}
-
-rootProject.buildDir = '../build'
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(':app')
-}
-
-tasks.register("clean", Delete) {
-    delete rootProject.buildDir
 }
